fixed an issue with photos not showing when using in a Card component

--- a/resources/sass/cmf/components/_card.scss
+++ b/resources/sass/cmf/components/_card.scss
@@ -9,28 +9,22 @@
         position: relative;
         width: 100%;
         height: 0;
-        padding-bottom: 66.66%;
+        padding-top: 66.66%;
         border-top-left-radius: $border-radius-2;
         border-top-right-radius: $border-radius-2;
         overflow: hidden;
-
-        img
-        {
-            position: absolute;
-            display: block;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+        background-position: center center;
+        background-size: cover;
 
         &:after
         {
             content: '';
             position: absolute;
+            top: 0;
             display: block;
             width: 100%;
             height: 100%;
-            background-color: rgba($color07, .5);
+            background-color: rgba($color07, .1);
         }
     }
 
